# json2xlsx

./: .gitignore  LICENSE  README.md  json2xlsx.cabal  stack.yaml
src/: Chaining.hs  Colors.hs  ColorsRGB.hs  JSONtoCellMap.hs  JSONtoXLSX.hs  MakeWorksheets.hs  Tests.hs  Tests00.hs  WriteXLSX.hs
src-commandline/: Main.hs
src-dll/: Export.hs  json2xlsx.def
src/JSONtoCellMap/: Internal.hs  Types.hs
src/JSONtoXLSX/: JSONtoCellMap.hs  MakeWorksheets.hs  Pictures.hs  SheetProtection.hs  Tests.hs
src/JSONtoXLSX/JSONtoCellMap/: ColorsRGB.hs  Conversions.hs  Types.hs
src/JSONtoXLSX/Pictures/: Draft.hs  DrawingPictures.hs  PictureData.hs  Tests.hs
src/Pictures/: DrawingPicture.hs  DrawingPictures.hs  PictureData.hs  Tests.hs
